small css spacing fixes

--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ p {
 }
 
 body {
-  margin: auto 15% auto 10%;
+  margin: auto 15% 5em 10%;
 }
